# bachata_school

./: add_data_subscription.py  celery_app.py  celeryconfig.py  config.py  docker-compose.yml  keyboards.py  load_data.py  main.py  payment.py  pyproject.toml  utils.py
alembic/: env.py
alembic/versions/: c5859877dff1_initial_migration.py
database/: database_manager.py
models/: __init__.py  models.py
src/: about_us.py  create_bot.py  dance_type_for_schedule.py  hall_description.py  helpers.py  menu.py  payment_handler.py  registration.py
