[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["zxING Homich,Andrei (AH GSM Swine) EXTERNAL <andrei.homich.ext@boehringer-ingelheim.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
alembic = "^1.11.1"
sqlalchemy = "^2.0.19"
httplib2 = "^0.22.0"
apiclient = "^1.0.4"
oauth2client = "^4.1.3"
pygsheets = "^2.0.6"
loguru = "^0.7.0"
python-dotenv = "^1.0.0"
utils = "^1.0.1"
gspread = "^5.10.0"
celery = "^5.3.1"
redis = "^4.6.0"
filters = "^1.3.2"
loader = "^2017.9.11"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
